<resources>
    <string name="app_name">DbPigmentationApp</string>
    <string name="nombre_app">Pigment Studio</string>
    <string name="pigmentos">Pigmentos</string>
    <string name="consultaSimple">Consulta Simple</string>
    <string name="consultaAvanzada">Consulta Avanzada</string>
    <string name="graficas">Gráficas</string>
    <string name="añadirPigmento">Añadir Pigmento</string>
    <string name="configuracion">Reportar Bug</string>
    <string name="consulta_por_nombre">Filtrar por nombre</string>
    <string name="consulta_por_color">Buscar por color</string>
    <string name="consulta_por_elemento">Ordenar por elemento</string>
    <string name="seleccionarColor">Selecciona un color</string>
    <string name="introducirNombre">Introducir Nombre</string>
    <string name="seleccionarPigmento">Seleccionar Pigmento</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccionarElemento">Elegir un elmento de la tabla periodica</string>
</resources>
